# node-llama

./: .gitignore  .npmignore  CMakeLists.txt  README.md  chatManager.js  download-model.sh  download.ts  downloadModel.js  index.js  index.mjs  index.ts  inference.js  jest.config.js  main.cpp  package-lock.json  package.json  tool_download.js  tool_inference.js  tsconfig.json
.github/workflows/: build.yml
__tests__/: basic.js  basic.ts
include/: npm-llama.h
llama/src/: CMakeLists.txt
src/: chat.ts  index.ts  npm-llama.cpp
test/: async.js  download-model.sh  index.js
test_consume/: README.md  async.js  index.js  package-lock.json  package.json  tsconfig.json
test_consume/src/: index.ts
tools/: tool_download.ts  tool_inference.ts  version.ts
